--- a/packages/jaeger-ui/src/components/TracePage/TraceTimelineViewer/TimelineHeaderRow/TimelineHeaderRow.css
+++ b/packages/jaeger-ui/src/components/TracePage/TraceTimelineViewer/TimelineHeaderRow/TimelineHeaderRow.css
@@ -14,6 +14,16 @@ SPDX-License-Identifier: Apache-2.0
   z-index: 4;
 }
 
+.TimelineHeaderRow::before {
+  content: '';
+  position: absolute;
+  top: -1px;
+  left: 0;
+  right: 0;
+  height: 1px;
+  background: inherit;
+}
+
 .TimelineHeaderRow--title {
   flex: 1;
   overflow: hidden;
